# cpp_algorithms

./: LICENSE  MIGRATION_STATUS.md  NEXT_STEPS.md  PROJECT_STRUCTURE.md  README.md  RESTRUCTURE_PLAN.md  STUDENT_CHECKLIST.md  TEACHER_GRADE_SHEET.md
00_intro/: README.md
00_intro/ethics_legal/: README.md
00_intro/gpg_signatures/: README.md
00_intro/gpg_signatures/examples/: file_signing.md  key_generation.md  verification.md
01_cpp_fundamentals/: README.md
01_cpp_fundamentals/03_shared_libraries/: README.md
01_cpp_fundamentals/04_signals/: README.md
01_cpp_fundamentals/05_memory_layout/: README.md
01_cpp_fundamentals/06_cli_args/: README.md
01_cpp_fundamentals/07_file_io/: 01_basic_text_io.cpp  02_binary_io.cpp  03_error_handling.cpp  04_advanced_techniques.cpp  05_stream_buffering.cpp  06_high_performance_io.cpp  07_advanced_error_handling.cpp  CMakeLists.txt  README.md  build.ps1
02_networking/08_tcp_client_server/: CMakeLists.txt  Makefile  README.md
02_networking/08_tcp_client_server/advanced/: client.cpp
02_networking/08_tcp_client_server/netcat/: netcat_server.cpp
02_networking/08_tcp_client_server/ping_pong/: ping_pong_server.cpp  settings.ini  test_message.txt
02_networking/08_tcp_client_server/simple/: simple_client.cpp
02_networking/11_traffic_interception/: README.md
03_debugging_analysis/09_gdb_disasm/: README.md
03_debugging_analysis/09_gdb_disasm/examples/: README.md  buffer_overflow.cpp  simple_debug.cpp
03_debugging_analysis/09_gdb_disasm/gdb_scripts/: README.md  analyze_buffer.gdb  debug_simple.gdb
03_debugging_analysis/12_strace_ltrace/: README.md
03_debugging_analysis/12_strace_ltrace/examples/: README.md  file_operations.cpp  library_calls.cpp  network_operations.cpp
04_filesystem/10_fs_mirroring/: README.md
04_filesystem/13_filesystem_forensics/: README.md
05_kernel/14_minimal_kernel/: README.md
05_kernel/15_kernel_module/: README.md
06_security_tools/16_auditd_journald/: README.md  README_EXPANDED.md
06_security_tools/17_cis_cat/: README.md  README_EXPANDED.md
06_security_tools/18_fail2ban/: README.md  README_EXPANDED.md
06_security_tools/19_suricata/: README.md  README_EXPANDED.md
06_security_tools/20_selinux_apparmor/: README.md  README_EXPANDED.md
07_forensics/21_dfir/: README.md
08_advanced_topics/22_cve_analysis/: README.md
08_advanced_topics/23_red_blue_team/: README.md
08_advanced_topics/24_incident_response/: README.md
avl_tree/: simple_avl.cxx
balanced_trees/: Makefile  README.md
balanced_trees/aa_tree/: README.md  simple_aa_tree.cxx
balanced_trees/scapegoat_tree/: README.md  simple_scapegoat.cxx
balanced_trees/treap/: README.md  simple_treap.cxx
bfs/: simple_bfs.cxx
binary_search_tree/: README.md
boruvka/: README.md  simple_boruvka.cxx
cpp_netcat/: Makefile  netcat_client.cpp  netcat_server.cpp  network_file_transfer_theory.md  network_file_transfer_theory.tex
dfs/: README.md  simple_dfs.cxx
file_read_write/: .gitignore  01_basic_text_io.cpp  02_binary_io.cpp  03_error_handling.cpp  04_advanced_techniques.cpp  05_stream_buffering.cpp  06_high_performance_io.cpp  07_advanced_error_handling.cpp  08_stringstream_examples.cpp  INSTRUCTIONS.md  PING_PONG_README.md  README.md  ping_pong_client.cpp  static_demo.cpp
floyd_warshall/: EXAMPLES.md  README.md  simple_floyd_warshall.cxx
graphics_engine/: CMakeLists.txt  README.md  TOPICS_TO_STUDY.md
graphics_engine/core/camera/: camera.cpp  camera.h
graphics_engine/core/math/: matrix4.cpp  matrix4.h  vector3.cpp  vector3.h
graphics_engine/core/renderer/: framebuffer.cpp  framebuffer.h
graphics_engine/examples/: basic_example.cpp  torus_example.cpp
graphics_engine/geometry/clipping/: clipping.cpp  clipping.h
graphics_engine/geometry/generators/: mesh_generator.cpp  mesh_generator.h
graphics_engine/geometry/normals/: normals.cpp  normals.h
graphics_engine/geometry/transforms/: affine.cpp  affine.h
graphics_engine/lighting/: gouraud.cpp  gouraud.h  phong.cpp  phong.h
graphics_engine/rasterization/bresenham/: circle.cpp  circle.h  line.cpp  line.h
graphics_engine/rasterization/polygons/: fill.cpp  fill.h
graphics_engine/textures/: texture.cpp  texture.h
hw_make/: Makefile  README.md  main.cpp
kruskal/: README.md  simple_kruskal.cxx
network_ping-pong/: .gitignore  CMakeLists.txt  README.md  SIMPLE_DEMO.md
network_ping-pong/client/: client.cpp  simple_client.cpp
network_ping-pong/server/: server.cpp  simple_server.cpp
prim/: README.md  simple_prim.cxx
queue/: simple_queue.cxx
red_black_tree/: simple_rbtree.cxx
reference/: README.md
reference/algorithms/: README.md
reference/algorithms/bfs/: README.md
reference/algorithms/dijkstra/: README.md  simple_dijkstra.cxx
reference/data_structures/: README.md
reference/data_structures/avl_tree/: README.md  simple_avl.cxx
reference/data_structures/binary_search_tree/: simple_bst.cxx
reference/data_structures/doubly_linked_list/: README.md  simple_doubly_linked_list.cxx
reference/data_structures/red_black_tree/: README.md
splay_tree/: README.md  simple_splay.cxx
stack/: README.md  simple_stack.cxx
